--- a/css/core.css
+++ b/css/core.css
@@ -1,6 +1,6 @@
-/*****************************************************/
-/* UnorderedList                                     */
-/*****************************************************/
+/* ======================================================================== */
+/* UnorderedList                                                            */
+/* ======================================================================== */
 
 * {
   box-sizing: border-box;
@@ -9,6 +9,7 @@
 #site {
   display: block;
   width: 50%;
+  min-width: 360px;
   margin: 5% auto;
   text-align: center;
 }
@@ -18,6 +19,7 @@ h1 {
   color: fuchsia;
   font-family: monospace;
   font-size: 28px;
+  cursor: default;
 }
 
 h1 span {
@@ -32,6 +34,7 @@ h1 span {
   font-family: monospace;
   text-transform: capitalize;
   line-height: 30px;
+  cursor: default;
 }
 
 form {
@@ -74,22 +77,51 @@ input[type=submit]:hover {
 
 #item-list {
   display: none;
-  width: 70%;
+  width: 80%;
+  min-width: 360px;
   margin: 20px auto;
   padding: 30px;
   list-style-type: none;
-  /*padding: 20px 15px 20px 45px;
-  list-style-type: circle;
-  border: 1px solid #eee;
-  border-radius: 2px;*/
 }
 
 #item-list li {
-  padding: 10px;
+  position: relative;
+  margin-bottom: 3px;
+  padding: 10px 30px;
   text-align: center;
   color: darkslategray;
-  /* color: gray; */
   font-family: Helvetica;
   font-size: 14px;
   line-height: 18px;
+}
+
+#item-list li:hover {
+  color: mediumorchid;
+  box-shadow: inset 0 0 15px rgba(0,0,0,0.025);
+  background: #F8F8F8;
+  border-radius: 5px;
+  cursor: default;
+}
+
+#item-list li:hover .remove {
+  display: block;
+}
+
+.remove {
+  z-index: 2;
+  position: absolute;
+  top: 50%;
+  right: -20px;
+  transform: translate(0,-48%);
+  display: none;
+  width: 30px;
+  color: #CCC;
+  font-size: 13px;
+  font-weight: bold;
+  text-align: right;
+}
+
+.remove:hover {
+  color: #000;
+  cursor: pointer;
 }
