--- a/css/core.scss
+++ b/css/core.scss
@@ -4,11 +4,13 @@
 
 * {
   box-sizing: border-box;
+  -webkit-user-select: none;
+  -moz-user-select: none;
 }
 
 #site {
   display: block;
-  width: 50%;
+  width: 60%;
   min-width: 360px;
   margin: 5% auto;
   text-align: center;
@@ -89,41 +91,44 @@ form {
 
   & li {
     position: relative;
-    margin-bottom: 3px;
+    margin-bottom: 4px;
     padding: 10px 30px;
     text-align: center;
     color: darkslategray;
     font-family: Helvetica;
     font-size: 14px;
     line-height: 18px;
+    word-wrap: break-word;
+    background: #FBFBFB;
+    border-radius: 5px;
+    transition: all .2s;
 
     &:hover {
       color: mediumorchid;
       box-shadow: inset 0 0 15px rgba(0,0,0,0.025);
       background: #F8F8F8;
-      border-radius: 5px;
-      cursor: default;
+      cursor: pointer;
 
       & .remove {
-        display: block;
+        color: #DDD;
       }
     }
 
     .remove {
       z-index: 2;
       position: absolute;
+      transform: translate(0,-45%);
       top: 50%;
-      right: -20px;
-      transform: translate(0,-48%);
-      display: none;
+      right: 10px;
       width: 30px;
-      color: #CCC;
+      color: #EEE;
       font-size: 13px;
       font-weight: bold;
       text-align: right;
+      transition: all .2s;
 
       &:hover {
-        color: #000;
+        color: #999;
         cursor: pointer;
       }
     }
