--- a/css/core.scss
+++ b/css/core.scss
@@ -4,24 +4,36 @@
 
 * {
   box-sizing: border-box;
-  -webkit-user-select: none;
-  -moz-user-select: none;
 }
 
-#site {
+#app {
   display: block;
   width: 60%;
-  min-width: 360px;
+  min-width: 420px;
   margin: 5% auto;
   text-align: center;
 }
 
 a {
   text-decoration: none;
+
+  &:focus {
+    outline: none;
+
+    & h1 {
+      color: blueviolet;
+
+      & span {
+        color: darkslategray;
+      }
+    }
+  }
 }
 
 h1 {
-  margin-bottom: 10px;
+  display: inline-block;
+  width: 360px;
+  margin: 0 auto 10px;
   color: fuchsia;
   font-family: monospace;
   font-size: 28px;
@@ -66,11 +78,15 @@ form {
       font-weight: bold;
       background: linear-gradient(#FCFCFC, #EEE);
 
-      &:hover {
+      &:hover, &:focus {
         color: #555;
         border-color: #CCC;
         box-shadow: 0 1px 1px rgba(0,0,0,0.1);
         cursor: pointer;
+      }
+
+      &:focus {
+        color: blueviolet;
       }
     }
   }
@@ -83,7 +99,7 @@ form {
 #item-list {
   display: none;
   width: 80%;
-  min-width: 360px;
+  min-width: 420px;
   margin: 20px auto;
   padding: 30px;
   list-style-type: none;
@@ -102,34 +118,48 @@ form {
     border-radius: 5px;
     transition: all .2s;
 
-    &:hover {
-      color: mediumorchid;
-      box-shadow: inset 0 0 15px rgba(0,0,0,0.025);
-      background: #F8F8F8;
-      cursor: pointer;
+    .remove, .clip {
+      z-index: 2;
+      position: absolute;
+      transform: translateY(-50%);
+      -webkit-transform: translateY(-50%);
+      top: 50%;
+      right: 0;
+      height: 30px;
+      width: 30px;
+      color: #CCC;
+      font-size: 15px;
+      text-align: center;
+      line-height: 30px;
+      transition: all .2s;
 
-      & .remove {
-        color: #DDD;
+      &:hover, &.zeroclipboard-is-hover {
+        color: mediumorchid; //royalblue;
+        text-shadow: 0 0 3px rgba(#FFF, 1);
+        cursor: pointer;
       }
     }
 
-    .remove {
-      z-index: 2;
-      position: absolute;
-      transform: translate(0,-45%);
-      top: 50%;
-      right: 10px;
-      width: 30px;
-      color: #EEE;
-      font-size: 13px;
-      font-weight: bold;
-      text-align: right;
-      transition: all .2s;
+    .clip {
+      left: 0;
+    }
 
-      &:hover {
-        color: #999;
-        cursor: pointer;
+    &:hover {
+      color: slategray; //mediumorchid;
+      box-shadow: inset 0 0 15px rgba(0,0,0,0.025);
+      background: #FAFAFA;
+      outline: none;
+      cursor: default;
+
+      & div {
+        color: slategray;
       }
+    }
+
+    &:focus {
+      box-shadow: inset 0 0 15px rgba(0,0,0,0.025);
+      background: #F8F8F8;
+      outline: none;
     }
   }
 }
