abstract list schema into /models

--- a/public/css/core.scss
+++ b/public/css/core.scss
@@ -1,6 +1,6 @@
-/* ======================================================================== */
-/* UnorderedList                                                            */
-/* ======================================================================== */
+// ==========================================================================
+// UnorderedList
+// ==========================================================================
 
 * {
   box-sizing: border-box;
