--- a/public/css/core.scss
+++ b/public/css/core.scss
@@ -6,6 +6,11 @@
   box-sizing: border-box;
 }
 
+body, #app {
+  -webkit-user-select: none;
+  user-select: none;
+}
+
 #app {
   display: block;
   width: 60%;
@@ -52,6 +57,11 @@ h1 {
   text-transform: capitalize;
   line-height: 30px;
   cursor: default;
+
+  span {
+    -webkit-user-select: initial;
+    user-select: initial;
+  }
 }
 
 form {
@@ -117,6 +127,13 @@ form {
     background: #FBFBFB;
     border-radius: 5px;
     transition: all .2s;
+    -webkit-user-select: none;
+    user-select: none;
+
+    span {
+      -webkit-user-select: initial;
+      user-select: initial;
+    }
 
     .remove, .clip {
       z-index: 2;
