add item title/span click-to-highlight

--- a/public/css/core.scss
+++ b/public/css/core.scss
@@ -131,6 +131,7 @@ form {
     user-select: none;
 
     span {
+      cursor: pointer;
       -webkit-user-select: initial;
       user-select: initial;
     }
