--- a/public/css/core.css
+++ b/public/css/core.css
@@ -117,6 +117,7 @@ form input[type=submit]:focus {
   user-select: none;
 }
 #item-list li span {
+  cursor: pointer;
   -webkit-user-select: initial;
   user-select: initial;
 }
