--- a/public/css/core.css
+++ b/public/css/core.css
@@ -1,4 +1,6 @@
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
@@ -38,6 +40,10 @@ h1 {
 }
 h1 span {
   color: gray;
+}
+
+ul {
+  list-style: none;
 }
 
 #list-title {
@@ -98,7 +104,6 @@ form input[type=submit]:focus {
   min-width: 420px;
   margin: 20px auto;
   padding: 30px;
-  list-style-type: none;
 }
 #item-list li {
   position: relative;
@@ -117,7 +122,6 @@ form input[type=submit]:focus {
   user-select: none;
 }
 #item-list li span {
-  cursor: pointer;
   -webkit-user-select: initial;
   user-select: initial;
 }
@@ -158,6 +162,33 @@ form input[type=submit]:focus {
   box-shadow: inset 0 0 15px rgba(0, 0, 0, 0.025);
   background: #F8F8F8;
   outline: none;
+}
+
+#nav {
+  z-index: 99;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 40px;
+  text-align: center;
+  background: #FFF;
+  border-top: 1px solid #EEE;
+}
+#nav li {
+  display: inline;
+  padding-right: 15px;
+  height: 40px;
+  line-height: 40px;
+}
+#nav li a {
+  color: gray;
+  font-family: Helvetica;
+  color: #999;
+  font-size: 12px;
+}
+#nav li a:hover {
+  color: slategray;
+  border-bottom: 2px solid fuchsia;
 }
 
 /*# sourceMappingURL=core.css.map */
