--- a/public/css/core.scss
+++ b/public/css/core.scss
@@ -202,6 +202,10 @@ form {
     height: 40px;
     line-height: 40px;
 
+    &:last-of-type {
+      padding-right: 0;
+    }
+
     a {
       color: gray;
       font-family: Helvetica;
