--- a/ext/styles.css
+++ b/ext/styles.css
@@ -1,24 +1,121 @@
 
+body {
+  text-align: center;
+}
+
+body#popup-window {
+  min-width: 200px;
+}
+
+body#options-window {
+  max-width: 400px;
+  margin: 20px auto;
+}
+
+h1 {
+  display: inline-block;
+  margin: 0 auto 10px;
+  color: #F0F;
+  font-family: monospace;
+  font-size: 18px;
+}
+
+body#options-window h1 {
+  font-size: 22px;
+  margin-bottom: 20px;
+}
+
+h1 span {
+  color: #808080;
+}
+
 h3 {
-
+  margin: 4px 0;
+  color: #999;
+  font-size: 11px;
+  font-family: monospace;
+  font-weight: normal;
+  text-transform: capitalize;
+  line-height: 30px;
+  cursor: default;
 }
 
-input#list {
-
+input {
+  width: 80%;
+  margin-bottom: 10px;
+  padding: 4px;
 }
 
-input#save {
+body#options-window input {
+  width: 90%;
+  margin-bottom: 20px;
+}
 
+input, button {
+  color: #888;
+  text-align: center;
+  border: 1px solid #DDD;
+  border-radius: 2px;
+  outline: none;
+}
+
+button {
+  padding: 4px 14px;
+  color: #666;
+  font-size: 10px;
+  font-weight: bold;
+  background: linear-gradient(#fcfcfc, #eeeeee);
+}
+
+button:hover, button:focus {
+  color: #555;
+  border-color: #CCC;
+  box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+  cursor: pointer;
+}
+
+button:focus {
+  color: #8A2BE2;
 }
 
 #status {
+  visibility: hidden;
   display: inline-block;
+  width: 90%;
+  margin: 5px 0;
+  height: 20px;
+  line-height: 20px;
+  font-weight: bold;
+}
+
+body#options-window #status {
+  width: 100%;
+  height: 30px;
+  line-height: 30px;
 }
 
 #status.pass {
-  color: green;
+  visibility: visible;
+  color: limegreen;
 }
 
 #status.fail {
+  visibility: visible;
   color: red;
+}
+
+a {
+  color: #AAA;
+  line-height: 20px;
+  font-size: 11px;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #888;
+}
+
+span.divider {
+  color: #DDD;
+  padding: 0 5px;
 }
