--- a/public/css/core.scss
+++ b/public/css/core.scss
@@ -3,6 +3,7 @@
 // ==========================================================================
 
 @import 'compass';
+@import 'breakpoint';
 
 * {
   margin: 0;
@@ -10,7 +11,75 @@
   @include box-sizing(border-box);
 }
 
+html, body {
+  height: 100%;
+}
+
+body {
+  min-height: 100%;
+  font-family: Helvetica, Arial, sans-serif;
+}
+
+nav {
+  width: 100%;
+  height: 48px;
+  background: #000;
+
+  h1 {
+    float: left;
+    padding-left: 10px;
+    line-height: 48px;
+    font-size: 18px;
+    color: #fff;
+  }
+
+  #menu {
+    float: right;
+    padding-right: 10px;
+    list-style: none;
+
+    li {
+      float: left;
+      display: none;
+      padding-left: 10px;
+      line-height: 48px;
+
+      @include breakpoint(600px) {
+        display: block;
+      }
+
+      &:first-of-type {
+        display: block;
+
+        @include breakpoint(600px) {
+          display: none;
+        }
+      }
+
+      a {
+        color: #fff;
+        text-decoration: none;
+      }
+    }
+  }
+}
+
 #app {
+  height: 100%;
+  width: 100%;
+  text-align: center;
+}
+
+#input {
+  height: 36px;
+  width: 85%;
+  margin-top: 100px;
+  border: 1px solid #000;
+  border-radius: 6px;
+}
+
+
+/* #app {
   display: block;
   width: 60%;
   min-width: 420px;
@@ -215,4 +284,4 @@ form {
       }
     }
   }
-}
+} */
